# photo-ai

./: .env.example  .env.gcp.example  .gcloudignore  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml  worker_entrypoint.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: router.py  websocket.py
backend/app/api/v1/: categories.py  duplicates.py  faces.py  google_photos.py  images.py  jobs.py  search.py  stats.py
backend/app/core/: database.py  exceptions.py  gcs_storage.py  minio_storage.py  storage.py
backend/app/ml/: categorizer.py  clip_encoder.py  embedding_provider.py  face_analyzer.py  hasher.py  vertex_embeddings.py
backend/app/models/: __init__.py  album.py  category.py  duplicate.py  face.py  image.py  job.py
backend/app/schemas/: __init__.py  category.py  duplicate.py  face.py  image.py  job.py  search.py  stats.py
backend/app/services/: google_photos_service.py
backend/app/utils/: image_utils.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: duplicate_detection.py  face_detection.py  image_processing.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_hasher.py  test_image_utils.py
deploy/: cloudbuild.yaml  deploy.sh
docs/: architecture.md  design-decisions.md  gcp-setup.md
frontend/: Dockerfile  next.config.mjs  package.json  tailwind.config.js
postman/: PhotoAI.postman_collection.json
(+37 files in other folders)
