[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photoai-backend"
version = "1.0.0"
description = "AI-powered photo management platform backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "minio>=7.2.0",
    "google-cloud-storage>=2.14.0",
    "google-cloud-aiplatform>=1.38.0",
    "google-generativeai>=0.8.0",
    "google-auth>=2.27.0",
    "google-auth-oauthlib>=1.2.0",
    "httpx>=0.27.0",
    "pillow>=10.2.0",
    "imagehash>=4.3.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.17.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.8.0",
    "factory-boy>=3.3.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
